# wren-dbt-converter

./: .gitignore  README.md  ROADMAP.md  config.example.yml  pyproject.toml
docs/: api.md  architecture.md  caching.md  configuration.md  mcp.md  schema-synthesis.md  security.md
docs/plans/: sec-a-jwt-auth.md
jsonschema/: lineage.schema.json  mdl.schema.json
src/dbt_graphql/: cli.py  config.default.yml  config.py  defaults.py  monitoring.py  pipeline.py  telemetry.py
src/dbt_graphql/api/: __init__.py  app.py  monitoring.py  policy.py  resolvers.py  telemetry.py
src/dbt_graphql/api/auth/: __init__.py  backend.py  keys.py  verifier.py
src/dbt_graphql/cache/: config.py  result.py
src/dbt_graphql/compiler/: __init__.py  connection.py  query.py
src/dbt_graphql/dbt/: artifacts.py
src/dbt_graphql/dbt/processors/: compiled_sql.py  constraints.py  data_tests.py
src/dbt_graphql/formatter/: graphql.py  schema.py
src/dbt_graphql/ir/: models.py
src/dbt_graphql/mcp/: discovery.py  server.py
src/dbt_graphql/serve/: app.py  resolvers.py
src/dbt_mdl/: __init__.py  cli.py  converter.py  pipeline.py
src/dbt_mdl/api/: __init__.py  resolvers.py  server.py
src/dbt_mdl/dbt/: artifacts.py  connection.py  models.py  profiles_parser.py
src/dbt_mdl/dbt/processors/: constraints.py  lineage.py  relationships.py  tests_preprocessor.py
src/dbt_mdl/domain/: __init__.py  models.py
src/dbt_mdl/graphjin/: formatter.py
src/dbt_mdl/graphql/: __init__.py  compiler.py  connection.py  formatter.py  schema.py
src/dbt_mdl/ir/: models.py
src/dbt_mdl/models/: __init__.py  data_source.py  mdl.py  profiles.py
src/dbt_mdl/parsers/: __init__.py  artifacts.py  profiles_parser.py
src/dbt_mdl/processors/: __init__.py  columns.py  constraints.py  relationships.py  tests_preprocessor.py
src/dbt_mdl/wren/: connection.py  formatter.py  models.py  type_mapping.py
src/wren_dbt_converter/: __init__.py  cli.py  converter.py
src/wren_dbt_converter/models/: _mdl.py  lineage.py  mdl.py
src/wren_dbt_converter/processors/: lineage.py
tests/: conftest.py  test_cli.py  test_converter.py  test_lineage.py
tests/dbt/: test_connection.py  test_profiles_parser.py
tests/dbt/processors/: test_lineage.py  test_relationships.py  test_tests_preprocessor.py
tests/fixtures/dbt-profiles/: sqlite.yml
tests/fixtures/jaffle-sandbox/: .gitignore  README.md  dbt_project.yml
tests/fixtures/jaffle-sandbox/models/: schema.yml
tests/fixtures/jaffle-sandbox/models/staging/: schema.yml
tests/graphjin/: test_formatter.py
tests/integration/: conftest.py  test_cli.py  test_converter.py  test_integration.py  test_mcp_enrichment.py  test_result_cache.py  test_serve.py
tests/unit/: test_compiler.py  test_config.py  test_connection.py  test_formatter.py  test_lineage.py  test_monitoring.py  test_pipeline.py  test_schema.py  test_telemetry.py
tests/unit/api/: test_monitoring.py  test_policy.py  test_policy_integration.py  test_telemetry.py
tests/unit/api/auth/: test_backend.py  test_keys.py  test_middleware_integration.py  test_verifier.py
tests/unit/cache/: test_result.py
tests/unit/compiler/: test_compiler.py  test_connection.py
tests/unit/dbt/: test_artifacts.py
tests/unit/dbt/processors/: test_column_lineage.py  test_constraints.py  test_data_tests.py  test_join_lineage.py  test_relationships.py  test_sqlglot_shared.py  test_table_lineage.py
tests/unit/formatter/: test_formatter.py  test_schema.py
tests/unit/mcp/: test_discovery.py  test_mcp_server.py
tests/wren/: test_data_source.py  test_type_mapping.py
wren-mdl/: lineage.schema.json  mdl.schema.json
